--- a/Projectmanagement/index.html
+++ b/Projectmanagement/index.html
@@ -202,7 +202,7 @@
       <div class="col-sm-8">
         <h2>We have to know what Project Management means</h2><br>
         <h4>What is a project? 
-        </br>Project is a temporary endeavour undertaken to create a unique product, service or results.</h4>
+        </br>Project is a temporary endeavour undertaken to create a unique product, service or result.</h4>
         <br><a href="https://www.youtube.com/watch?v=rBSCvPYGnTc&t=1061s" target="_blank"><button class="btn btn-primary btn-lg">Reference Site</button></a>
       </div>  
       <div class="col-sm-4">
