--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
       <h2>Data View</h2>
       <br />
       <iframe src="https://script.google.com/macros/s/AKfycbzQ2cHw9LL4huXKUvAhRsxh-UumpJXkPy4r5dJZP5lg2CX6gqq_Bd5ETxgQnxp8YlXL/exec"
-        style="width: 100%; height: 500px; "> </iframe>
+        style="width: 110%; height: 600px; "> </iframe>
     </div>
     </div>
   </div>
@@ -657,7 +657,7 @@
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
   <p>This site powered By <a href="https://wic.nsw.edu.au/" title="Visit Our College" target="blank">wic.nsw.edu.au/</a></p>
-  <p>Powered by 12345 John</p>
+  <p>Powered by Arthur Leonard Lesmana</p>
 </footer>
 </body>
 <!-- Load external JavaScript -->
