--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage"><span class="glyphicon glyphicon-user"></span>&nbsp;User</a>
+      <a class="navbar-brand" href="#myPage"><span class="glyphicon glyphicon-user"></span>&nbsp;18780</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
@@ -172,7 +172,7 @@
      
     </div>
     <div class="col-sm-4">    
-      <img src="images/frame.png" alt="scan by your phone" style="float: right; margin-top: -25px;" id="hideme" /> <br />
+      <img src="images/frame.png" alt="scan by your phone" style="margin-right: -50px; size: 50%;" id="hideme" /> <br />
        <!-- <a href="#link" class="btn btn-info" role="button">Link Button</a> -->
        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://forms.gle/FNzBa6CvsxvHJEvW8" target="blank" class="btn btn-info btn-lg">
         Fill the Feedback Form &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button></a><br />
