--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
      
     </div>
     <div class="col-sm-4">    
-      <img src="images/frame.png" alt="scan by your phone" style="margin-right: -50px; size: 50%;" id="hideme" /> <br />
+      <img src="images/frame.png" alt="scan by your phone" style="margin-right: -50px; height: 50%; width: 50%;" id="hideme" /> <br />
        <!-- <a href="#link" class="btn btn-info" role="button">Link Button</a> -->
        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://forms.gle/FNzBa6CvsxvHJEvW8" target="blank" class="btn btn-info btn-lg">
         Fill the Feedback Form &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button></a><br />
