--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </li>        
         <li><a href="#services">TEAMS</a></li>
         <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#pricing">PROTECTION</a></li>
+        <li><a href="#pricing">PM DEMO</a></li>
         <li><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
@@ -437,6 +437,7 @@
     </ol>
 
     <!-- Wrapper for slides -->
+    <div id="pricing" class="container-fluid"></div>
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <center>
