--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
   </p>
   <img src="images/ganttchart.png" 
   alt="Home Connect" width="60%" height="60%"><br /><br />
-  
+  <br><a href="https://docs.google.com/spreadsheets/d/18PuwJ7gfSPf-d5Q7Mw0aNGt9jH1qbbZdgsUOxPIbb_Q/edit?usp=sharing" target="_blank"><button class="btn btn-primary btn-lg">Link To Sheets</button></a>
 </div>
 
 <!-- Container (Services Section) -->
