--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
         </li>
       </ul>
       <ul>
+        <li style="display: inline; font-size: large;">
+          <a href="images/18780_Project Management_Assessment 1.docx" target="_blank">Download Assesment 1</a>  ||
+        </li>
          <li style="display: inline; font-size: large;">
           <a href="https://docs.google.com/spreadsheets/d/1FdGXBWErc3bKPVSZDsMfwpi9f3esHxsCvx8uaES-mbI/edit?usp=sharing" target="_blank">Check Subscribe Register</a>  ||
         </li>        
